@@ -70,6 +70,14 @@ METHODS
 
             It's required.
 
+    *       "verbose"
+
+            Verbose mode.
+
+            Could be 1 or 0.
+
+            Default value is 0.
+
     Returns instance of object.
 
   "object"
