@@ -1,6 +1,7 @@
 0.05
  - Add edition number use case.
  - Add publisher place use case.
+ - Add verbose parameter.
 
 0.04 2023-06-11T18:24:52+02:00
  - Add publication date use case.
